<resources>
    <string name="app_name">Calculadora</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="clear">C</string>
    <string name="pow">^</string>
    <string name="square_root">√</string>
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="times">*</string>
    <string name="divide">/</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="percent">%</string>
</resources>