<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calcView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:id="@+id/LLoptionsRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/BTsquare"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/square_root"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:onClick="onButtonClick"
            />
        <Button
            android:id="@+id/BTpow"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/pow"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:onClick="onButtonClick"
            />
        <Button
            android:id="@+id/BTpercent"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:onClick="onButtonClick"
            />
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLfirstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_seven"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />

        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_eight"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />

        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_nine"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLsecondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_four"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />

        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_five"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />

        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_six"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/less"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLthirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_one"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />

        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_two"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />

        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_three"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/times"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLfourthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
        <Button
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            />
    </LinearLayout>

</LinearLayout>